remove scrollbars from treemap. Fixes #75

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -326,6 +326,9 @@ div#search_button {
 	margin: 0 auto;
 	display: block;
 }
+.tab-content.multi-search{
+    overflow: visible;
+}
 h2.ghead{
 	margin-bottom: 1em;
 	font-weight: bold;
